--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 -->
 <html>
 <head>
-	<title>Linear by TEMPLATED</title>
+	<title>HE JUNXIAN's Website</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -30,8 +30,8 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 			<!-- Logo -->
 			<div id="logo">
-				<h1><a href="#">Linear</a></h1>
-				<span class="tag">By TEMPLATED</span>
+				<h1><a href="#">He Junxian</a></h1>
+				<span class="tag">A Passionate Test Engineer who love to explore and learn new things</span>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 		<section>
 			<header>
 				<h2>Get in touch</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+				<span class="byline">See you soon</span>
 			</header>
 			<ul class="contact">
 				<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
