update default.html and index.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<!-- Logo -->
 			<div id="logo">
 				<h1><a href="#">He Junxian</a></h1>
-				<span class="tag">A Passionate Test Engineer who love to explore and learn new things</span>
+				<span class="tag">A Test Engineer</span>
 			</div>
 		</div>
 	</div>
