--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 	<div id="tweet">
 		<div class="container">
 			<section>
-				<blockquote>&ldquo;Program testing can be used to show the presence of bugs, but never to show their absence!"&rdquo; -- Edsger Dijkstra</blockquote>
+				<blockquote>&ldquo;Program testing can be used to show the presence of bugs, but never to show their absence!&rdquo; -- Edsger Dijkstra</blockquote>
 			</section>
 		</div>
 	</div>
