--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
 					<a href="{{ site.prefix }}{{ page.url }}" class="image full"><img src="/assets/{{ page.featured }}" alt=""></a>
 					<header>
 						<h2>{{ page.title }}</h2>
+						<h5>{{ page.time }}</h5>
 					</header>
 					{{ page.content }}
 				</section>
