--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,9 @@ layout: default
 				<section class="8u -2u">
 					<a href="{{ site.prefix }}{{ page.url }}" class="image full"><img src="/assets/{{ page.featured }}" alt=""></a>
 					<header>
-						<h2>{{ page.title }}</h2>
-						<h5>{{ page.time }}</h5>
+						<h2 align="center">{{ page.title }}</h2>
+						<p></p>
+						<h3 align="center">{{ page.time }}</h3>
 					</header>
 					{{ page.content }}
 				</section>
